pkg/generator/testdata/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo-bar-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/auth-tls-insecure: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.foo.bar
    - baz.foo.bar
    secretName: foo-bar-tls
  rules:
  - host: api.foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 8000
  - host: baz.foo.bar
    http:
      paths:
      - path: /hakuna
        backend:
          serviceName: baz0-service
          servicePort: 8000
      - path: /matata
        backend:
          serviceName: baz1-service
          servicePort: 8000
